product zoom z-index fixed

--- a/Frontend/Customer/app/public/assets/scss/theme/_menu.scss
+++ b/Frontend/Customer/app/public/assets/scss/theme/_menu.scss
@@ -2624,3 +2624,7 @@ header{
   opacity: 0;
   cursor:pointer;
 }
+
+.product-thumbnail > div{
+  z-index: 98 !important;
+}
